--- a/react-front-end/public/style.css
+++ b/react-front-end/public/style.css
@@ -13,14 +13,21 @@
 
 }
 #comic-display{
-
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    border-style: solid;
     grid-area: B;
+    width: 70%;
 }
 #new-contribution{
     grid-area: C;
 }
 #explinations{
     grid-area: D;
+}
+.comic-container{
+    
 }
 #comic{
     display: block;
@@ -29,3 +36,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+body{
+ background-color: #96A8C8;
+}
+
